--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "style-loader": "^0.19.0",
     "supertest": "^3.0.0",
     "underscore": "^1.8.3",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
