--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "config.js",
   "dependencies": {
     "async": "^2.6.0",
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -12,6 +13,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chance": "^1.0.12",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-loader": "^1.9.0",
