--- a/package.json
+++ b/package.json
@@ -2,26 +2,15 @@
   "name": "northcoders-news",
   "version": "1.0.0",
   "description": "",
-  "main": "config.js",
+  "main": "src/index.js",
   "dependencies": {
     "async": "^2.6.0",
     "axios": "^0.17.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "chai": "^4.1.2",
     "chance": "^1.0.12",
     "cors": "^2.8.4",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "log4js": "^2.3.11",
-    "mocha": "^4.0.1",
     "moment": "^2.19.1",
     "mongoose": "^4.13.1",
     "nodemon": "^1.12.1",
@@ -33,20 +22,38 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.4.0",
+    "mocha": "^4.0.1",
     "style-loader": "^0.19.0",
     "supertest": "^3.0.0",
-    "underscore": "^1.8.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "mocha ./spec/*.spec.js",
+    "test": "mocha --require babel-register ./spec/*.spec.js",
     "start": "nodemon index.js",
     "dev": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack -p"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  }
 }
