--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
@@ -36,7 +38,9 @@
     "eslint": "^4.11.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
     "mocha": "^4.0.1",
+    "react-test-renderer": "^16.1.1",
     "style-loader": "^0.19.0",
     "supertest": "^3.0.0",
     "url-loader": "^0.6.2",
