--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "axios": "^0.17.1",
     "chance": "^1.0.12",
     "cors": "^2.8.4",
+    "enzyme": "^3.2.0",
+    "enzyme-to-json": "^3.2.2",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "log4js": "^2.3.11",
@@ -20,6 +22,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-form": "^7.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
@@ -57,7 +60,9 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "env"
+      "env",
+      "react",
+      "es2015"
     ]
   }
 }
