implement add up or down votes to comments

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "test": "mocha --require babel-register ./spec/*.spec.js",
     "start": "nodemon index.js",
     "dev": "webpack-dev-server",
-    "build": "webpack -p"
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
