--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.19.1",
     "mongoose": "^4.13.1",
     "nodemon": "^1.12.1",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-fa": "^5.0.0",
