--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "homepage": "https://zoejoliver.github.io/Northcoders-News",
   "dependencies": {
     "async": "^2.6.0",
     "axios": "^0.17.1",
@@ -42,6 +43,7 @@
     "eslint": "^4.11.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.4.0",
+    "gh-pages": "^1.1.0",
     "jest": "^21.2.1",
     "mocha": "^4.0.1",
     "react-test-renderer": "^16.1.1",
@@ -56,7 +58,8 @@
     "start": "nodemon index.js",
     "dev": "webpack-dev-server",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
