--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "homepage": "https://zoejoliver.github.io/Northcoders-News",
+  "homepage": "https://zoejoliver.github.io/Northcoders-News/",
   "dependencies": {
     "async": "^2.6.0",
     "axios": "^0.17.1",
@@ -58,8 +58,9 @@
     "start": "nodemon index.js",
     "dev": "webpack-dev-server",
     "watch": "webpack --watch",
-    "build": "webpack",
-    "deploy": "npm run build&&gh-pages -d build"
+    "build": "webpack -p",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
