--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
   },
   "scripts": {
     "test": "mocha --require babel-register ./spec/*.spec.js",
-    "start": "nodemon index.js",
+    "start": "node server-FE.js",
+    "postinstall": "node deploy",
     "dev": "webpack-dev-server",
     "watch": "webpack --watch",
     "build": "webpack -p",
