--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules
-public/bundle.js
-webpack.production.config.js
-server-FE.js
-public/build
+/node_modules
+/public/bundle.js
+/webpack.production.config.js
+/server-FE.js
+/public/build
