--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.4",
     "enzyme": "^3.2.0",
     "enzyme-to-json": "^3.2.2",
+    "eslint-plugin-jsx": "0.0.2",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "log4js": "^2.3.11",
@@ -60,7 +61,8 @@
     "dev": "webpack-dev-server",
     "watch": "webpack --watch",
     "build": "webpack -p",
-    "lint": "eslint ./src",
+    "lint": "eslint ./",
+    "posttest": "npm run lint",
     "precommit": "npm run lint --fix"
   },
   "author": "",
