--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "log4js": "^2.3.11",
     "moment": "^2.19.1",
     "mongoose": "^4.13.1",
+    "nock": "^9.1.4",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "prop-types": "^15.6.0",
@@ -29,6 +30,7 @@
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
   },
